More and more friendly names

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -17,43 +17,46 @@ homeassistant:
     sensor.ping_1und1:
       icon: mdi:web
     sensor.yr_temperature:
-      friendly_name: Temperature
+      friendly_name: Temperature Outside
     sensor.ws500_temperature_0:
-      friendly_name: Temperature
+      friendly_name: Temperature Office
     sensor.ws500_temperature_1:
-      friendly_name: Temperature
+      friendly_name: Temperature Bedroom
     sensor.ws500_temperature_2:
-      friendly_name: Temperature
+      friendly_name: Temperature Bathroom
     sensor.ws500_temperature_3:
-      friendly_name: Temperature
+      friendly_name: Temperature Living Room
     sensor.ws500_humidity_0:
-      friendly_name: Humidity
+      friendly_name: Humidity Office
       icon: mdi:water-percent
     sensor.ws500_humidity_1:
-      friendly_name: Humidity
+      friendly_name: Humidity Bedroom
       icon: mdi:water-percent
     sensor.ws500_humidity_2:
-      friendly_name: Humidity
+      friendly_name: Humidity Bathroom
       icon: mdi:water-percent
     sensor.ws500_humidity_3:
-      friendly_name: Humidity
+      friendly_name: Humidity Living Room
       icon: mdi:water-percent
     sensor.yr_humidity:
-      friendly_name: Humidity
+      friendly_name: Humidity Outside
       icon: mdi:water-percent
     sensor.fastcom_download:
+      icon: mdi:download
       friendly_name: Fast.com Down
     sensor.speedtest_download:
+      icon: mdi:download
       friendly_name: Speedtest Down
     sensor.speedtest_upload:
+      icon: mdi:upload
       friendly_name: Speedtest Up
     sensor.speedtest_ping:
       friendly_name: Ping Speedtest
       icon: mdi:speedometer
     light.schlazi_decke:
-      friendly_name: Ceiling
+      friendly_name: Ceiling Bedroom
     light.arbeitszimmer:
-      friendly_name: Ceiling
+      friendly_name: Ceiling Office
     light.couchtisch_l:
       friendly_name: Coffee Table
     light.esstisch:
