--- a/configuration.yaml
+++ b/configuration.yaml
@@ -154,6 +154,42 @@ logbook:
 # Track the sun
 sun:
 
+device_tracker:
+  - platform: locative
+
+pilight:
+  host: 10.10.5.40
+  port: 5000
+  whitelist:  # optional
+    protocol:
+      - brennenstuhl
+
+switch:
+  - platform: mypilight
+    switches:
+      Color Balls:
+        on_code:
+          protocol: brennenstuhl
+          systemcode: 31
+          unitcode: 1
+          'on': 1
+        off_code:
+          protocol: brennenstuhl
+          systemcode: 31
+          unitcode: 1
+          'off': 1
+
+      Curtain Balls:
+        on_code:
+          protocol: brennenstuhl
+          systemcode: 31
+          unitcode: 2
+          'on': 1
+        off_code:
+          protocol: brennenstuhl
+          systemcode: 31
+          unitcode: 2
+          'off': 1
 
 # Weather Prediction
 sensor:
