--- a/configuration.yaml
+++ b/configuration.yaml
@@ -268,6 +268,8 @@ group:
       - light.couchtisch_l
       - light.duder
       - light.esstisch
+      - switch.color_balls
+      - switch.curtain_balls
 
   Bedroom:
     entities:
