Modified tracking settings (wrong name etc.)

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -158,11 +158,13 @@ sun:
 
 device_tracker:
   - platform: locative
+    track_new_devices: False
 
-  - platform: unifi
-    username: !secret unifi_username
-    password: !secret unifi_password
-    host: 10.10.9.8
+#  - platform: unifi
+#    username: !secret unifi_username
+#    password: !secret unifi_password
+#    host: 10.10.9.8
+
 
 pilight:
   host: 10.10.5.40
@@ -317,11 +319,12 @@ group:
       - sensor.speedtest_ping
       - sensor.ping_google
       - sensor.ping_1und1
+      - sensor.ping_ubnt
 
   Presence:
     entities:
-      - device_tracker.jans_iphone
-      - device_tracker.miriams_iphone
+      - device_tracker.b66bcbbd71454aaca21f9c0b16c9acde
+      #- device_tracker.miriams_iphone
 
 # === Views ===
 
