--- a/known_devices.yaml
+++ b/known_devices.yaml
@@ -1,11 +1,8 @@
 
 b66bcbbd71454aaca21f9c0b16c9acde:
-  hide_if_away: false
-  mac: !secret jan_iphone_mac
   name: Jans iPhone
-  icon: mdi:cellphone-iphone
-  gravatar: mail@janwillhaus.de
-  track: true
+  mac: null
+  track: yes
 
 miriams_iphone:
   hide_if_away: false
