--- a/configuration.yaml
+++ b/configuration.yaml
@@ -94,4 +94,5 @@ sensor: !include sensor.yaml
 notify: !include notify.yaml
 script: !include_dir_merge_list script
 automation: !include_dir_merge_list automation
+media_player: !include media_player.yaml
 input_select: !include input_select.yaml
