--- a/script/sleep_timer.yaml
+++ b/script/sleep_timer.yaml
@@ -3,7 +3,7 @@ sleep_timer:
   alias: 'Sleep'
   sequence:
     - delay:
-        minutes: '{{ states.input_elect.sleep_minutes.state | int }}'
+        minutes: '{{ states.input_select.sleep_minutes | int }}'
     - service: switch.turn_off
       data:
         entity_id:
