--- a/switch.yaml
+++ b/switch.yaml
@@ -8,11 +8,13 @@
         systemcode: 31
         unitcode: 1
         'on': 1
+        'repeat': 4
       off_code:
         protocol: brennenstuhl
         systemcode: 31
         unitcode: 1
         'off': 1
+        'repeat': 4
 
     Curtain Balls:
       on_code:
@@ -25,3 +27,46 @@
         systemcode: 31
         unitcode: 2
         'off': 1
+
+    Living Room Stereo:
+      on_code:
+        protocol: brennenstuhl
+        systemcode: 31
+        unitcode: 3
+        'on': 1
+      off_code:
+        protocol: brennenstuhl
+        systemcode: 31
+        unitcode: 3
+        'off': 1
+
+    Kitchen Stereo:
+      on_code:
+        protocol: brennenstuhl
+        systemcode: 30
+        unitcode: 4
+        'on': 1
+      off_code:
+        protocol: brennenstuhl
+        systemcode: 30
+        unitcode: 4
+        'off': 1
+    
+    Bedroom Stereo:
+      on_code:
+        protocol: brennenstuhl
+        systemcode: 31
+        unitcode: 5
+        'on': 1
+      off_code:
+        protocol: brennenstuhl
+        systemcode: 31
+        unitcode: 5
+        'off': 1
+
+- platform: command_line
+  switches:
+    relais11: 
+      command_on: ssh pi@relaispi1 gpio write 0 0
+      command_off: ssh pi@relaispi1 gpio write 0 1
+
