--- a/customize.yaml
+++ b/customize.yaml
@@ -61,3 +61,5 @@ switch.curtain_balls:
   icon: mdi:lightbulb-outline
 switch.color_balls:
   icon: mdi:lightbulb-outline
+script.sleep_timer_all_off:
+  icon: mdi:alarm-snooze
