--- a/customize.yaml
+++ b/customize.yaml
@@ -63,3 +63,7 @@ switch.color_balls:
   icon: mdi:lightbulb-outline
 script.sleep_timer_all_off:
   icon: mdi:alarm-snooze
+group.all_automations:
+  hidden: false
+group.all_scripts:
+  hidden: false
