--- a/configuration.yaml
+++ b/configuration.yaml
@@ -90,5 +90,5 @@ sensor: !include sensor.yaml
 notify: !include notify.yaml
 script: !include_dir_named script
 automation: !include_dir_merge_list automation
-media_player: !include media_player.yaml
+#media_player: !include media_player.yaml
 input_select: !include input_select.yaml
