Re-parametrized Pings

--- a/sensor.yaml
+++ b/sensor.yaml
@@ -31,12 +31,7 @@
       - 30
 
   - platform: command_line
-    name: Ping Google
-    command: ping -qc 3 google.de | tail -1 | cut -d '/' -f 5
-    value_template: "{{ value | float }}"
-    unit_of_measurement: ms
-
-  - platform: command_line
+    scan_interval: 360
     name: Ping 1und1
     command: ping -qc 3 1und1.de | tail -1 | cut -d '/' -f 5
     value_template: "{{ value | float }}"
@@ -63,10 +58,4 @@
     name: 'Humidity MQTT Ba'
     unit_of_measurement: '%'
     value_template: '{{ value_json.humidity }}'
-
-  - platform: command_line
-    name: Ping Ubnt
-    command: ping -qc 3 10.10.8.1 | tail -1 | cut -d '/' -f 5
-    value_template: "{{ value | float }}"
-    unit_of_measurement: ms
 
