--- a/group.yaml
+++ b/group.yaml
@@ -68,8 +68,19 @@ Office:
 Weather:
   entities:
     - sun.sun
-    - sensor.yr_temperature
-    - sensor.yr_humidity
+    - sensor.dark_sky_icon
+    - sensor.dark_sky_summary
+    - sensor.dark_sky_temperature
+    - sensor.dark_sky_apparent_temperature
+    - sensor.dark_sky_dew_point
+    - sensor.dark_sky_humidity
+    - sensor.dark_sky_precip
+    - sensor.dark_sky_precip_probability
+    - sensor.dark_sky_wind_speed
+    - sensor.dark_sky_wind_bearing
+    - sensor.dark_sky_pressure
+    - sensor.dark_sky_cloud_coverage
+    - sensor.dark_sky_precip_intensity
 
 Connectivity:
   entities:
