--- a/sensor.yaml
+++ b/sensor.yaml
@@ -11,10 +11,22 @@
       - humidity2
       - humidity3
 
-  - platform: yr
+  - platform: darksky
+    api_key: !secret darksky_api_key
     monitored_conditions:
+      - summary
+      - icon
+      - precip_type
+      - precip_intensity
+      - precip_probability
       - temperature
+      - apparent_temperature
+      - dew_point
+      - wind_speed
+      - wind_bearing
+      - cloud_cover
       - humidity
+      - pressure
 
   - platform: speedtest
     monitored_conditions:
