Introduced Osram Lightify for state-ful plug switches

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -93,8 +93,11 @@ pilight:
 
 # Include hub-based light platforms
 light:
-  platform: hue
-  host: 10.10.4.99
+  - platform: hue
+    host: 10.10.4.99
+  - platform: osramlightify
+    host: 10.10.4.40
+
 
 
 # Include other config files
