--- a/configuration.yaml
+++ b/configuration.yaml
@@ -99,6 +99,12 @@ light:
     host: 10.10.4.40
 
 
+# Include network media platforms
+media_player:
+  - platform: apple_tv
+    host: 10.10.5.39
+    login_id: !secret appletv_loginid
+
 
 # Include other config files
 group: !include group.yaml
