--- a/group.yaml
+++ b/group.yaml
@@ -32,6 +32,7 @@ Living room electronics:
   name: Entertainment
   entities:
     - light.stereoanlage
+    - media_player.apple_tv
     - sensor.sonarr_upcoming
 
 Living room climate:
